fix: new message button mobile details

--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -11,6 +11,7 @@
         flex-direction: column;
         gap: 25px;
         background-color: white;
+        position: relative;
         .nav-header {
             display: flex;
             align-items: center;
@@ -61,6 +62,31 @@
                     grid-area: 2 / 1 / 3 / 2;
                 }
             }
+        }
+    }
+}
+
+.new-message-mobile-btn {
+    .new-message-icon {
+        display: none;
+        position: absolute;
+        right: 16px;
+        bottom: 16px;
+        img {
+            width: 60px;
+            height: 60px;
+            border-radius: 30px;
+            box-shadow: 0px 6px 10px 0px #00000033;
+        }
+        &:hover {
+            img {
+                @include transition();
+                content: url('/assets/img/icons/new_message_click.svg');
+                box-shadow: 0px 6px 10px 0px #00000044;
+            }
+        }
+        @media screen and (max-width: 900px) {
+            display: block;
         }
     }
 }
